--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "nativescript": {
-    "id": "org.nativescript.angularnativescriptdemo",
+    "id": "org.nativescript.EI",
     "tns-android": {
       "version": "6.5.0"
     },
@@ -11,28 +11,34 @@
   "description": "NativeScript Application",
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
+  "scripts": {
+    "ngcc": "ngcc --properties es2015 module main --first-only",
+    "postinstall": "npm run ngcc"
+  },
   "dependencies": {
-    "@angular/animations": "~8.2.0",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
+    "@angular/animations": "~9.1.0",
+    "@angular/common": "~9.1.0",
+    "@angular/compiler": "~9.1.0",
+    "@angular/core": "~9.1.0",
+    "@angular/forms": "~9.1.0",
+    "@angular/platform-browser": "~9.1.0",
+    "@angular/platform-browser-dynamic": "~9.1.0",
+    "@angular/router": "~9.1.0",
+    "@nativescript/angular": "~9.0.0",
     "@nativescript/theme": "~2.3.0",
-    "nativescript-angular": "~8.21.0",
+    "@ngrx/store": "^9.2.0",
     "reflect-metadata": "~0.1.12",
-    "rxjs": "^6.4.0",
+    "rxjs": "^6.5.0",
     "tns-core-modules": "~6.5.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~8.2.0",
-    "@ngtools/webpack": "~8.2.0",
+    "@angular/compiler-cli": "~9.1.0",
+    "@ngtools/webpack": "~9.1.0",
     "nativescript-dev-webpack": "~1.5.0",
-    "typescript": "~3.5.3"
+    "node-sass": "^4.14.1",
+    "tns-platform-declarations": "~6.5.0",
+    "typescript": "~3.8.3"
   },
-  "gitHead": "20a65d338ae8f8911087ab6615b89363f864b07b",
   "readme": "NativeScript Application"
 }
