--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "~9.1.0",
+    "@nativescript/schematics": "^9.0.0",
     "@ngtools/webpack": "~9.1.0",
+    "@schematics/angular": "^9.1.12",
     "nativescript-dev-webpack": "~1.5.0",
     "node-sass": "^4.14.1",
     "tns-platform-declarations": "~6.5.0",
+    "tslint": "^6.1.3",
     "typescript": "~3.8.3"
   },
   "readme": "NativeScript Application"
